<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- Home Screen -->
    <string name="home_logo_content_description">Political preparedness home logo</string>
    <string name="home_upcoming_elections_button_text">Upcoming elections</string>
    <string name="home_representatives_button_text">Find my representatives</string>

    <!-- Election Screen -->
    <string name="election_back_arrow_button_content_description">Navigate back button</string>
    <string name="election_upcoming_elections_header_text">Upcoming Elections</string>
    <string name="election_saved_elections_header_text">Saved Elections</string>

    <!-- Representatives Screen -->
    <string name="representatives_search_title">Representative Search</string>
    <string name="representatives_address_line_one_hint">Address Line 1</string>
    <string name="representatives_address_line_two_hint">Address Line 2</string>
    <string name="representatives_city_hint">City</string>
    <string name="representatives_zip_hint">Zip</string>
    <string name="representatives_find_button_title">Find my representatives</string>
    <string name="representatives_use_location_button_title">Use my location</string>
    <string name="representatives_list_title">My Representatives</string>
    <string name="representatives_list_placeholder_text">No representatives at the moment</string>

    <!-- Representative Item -->
    <string name="representative_image_content_description">Representative image</string>
    <string name="representative_web_icon_content_description">Web icon</string>
    <string name="representative_facebook_icon_content_description">Facebook icon</string>
    <string name="representative_twitter_icon_content_description">Twitter icon</string>

    <!-- Voter Info Screen -->
    <string name="voter_info_state_header_text">Election Information</string>
    <string name="voter_info_state_locations_text">Voting Locations</string>
    <string name="voter_info_state_ballot_text">Ballot Information</string>
    <string name="voter_info_state_correspondence_header_text">Mailing Address</string>
    <string name="voter_info_election_default_name_text">Election Information</string>
    <string name="voter_info_election_followed_button_text">Unfollow election</string>
    <string name="voter_info_election_unfollowed_button_text">Follow election</string>

    <!-- Errors -->
    <string name="elections_upcoming_elections_retrieving_error">An error occurred when requesting the upcoming elections.</string>
    <string name="representatives_retrieving_error">An error occurred when requesting the representatives.</string>
    <string name="elections_saved_elections_retrieving_error">An error occurred when requesting the saved elections.</string>
    <string name="elections_saved_elections_empty_error">You haven\'t followed any election yet.</string>
    <string name="location_required_error">Location services must be enabled to find representatives by your location</string>
    <string name="voter_info_error_getting_data_error">An error occurred while loading the election information, please try again later.</string>
    <string name="voter_info_insufficient_data_error">The information provided is not enough to obtain the details of the Election.</string>
    <string name="voter_info_db_error">An error has occurred with the verification of your election marker</string>

</resources>
