<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.launch.LaunchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ImageView
            android:id="@+id/home_logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/margin_medium"
            android:contentDescription="@string/home_logo_content_description"
            app:layout_constraintBottom_toTopOf="@id/upcoming_elections_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ballot_logo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upcoming_elections_button"
            style="@style/home_button_style"
            android:layout_width="0dp"
            android:layout_height="@dimen/home_button_height_size"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/home_upcoming_elections_button_text"
            app:layout_constraintBottom_toTopOf="@id/representatives_button"
            app:layout_constraintEnd_toEndOf="@+id/representatives_button"
            app:layout_constraintStart_toStartOf="@id/representatives_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/representatives_button"
            style="@style/home_button_style"
            android:layout_width="0dp"
            android:layout_height="@dimen/home_button_height_size"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/home_representatives_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>