<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.ElectionsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ImageView
            android:id="@+id/back_arrow_button"
            android:layout_width="@dimen/election_back_arrow_button_size"
            android:layout_height="@dimen/election_back_arrow_button_size"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:clickable="true"
            android:background="@drawable/ripple_effect"
            android:contentDescription="@string/election_back_arrow_button_content_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/upcoming_elections_header"
            style="@style/election_header_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/election_upcoming_elections_header_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_arrow_button" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcoming_elections_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:itemCount="2"
            tools:listitem="@layout/election_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/saved_elections_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upcoming_elections_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@id/saved_elections_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/saved_elections_header"
            style="@style/election_header_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:text="@string/election_saved_elections_header_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/saved_elections_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:listitem="@layout/election_item"
            tools:itemCount="2"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/saved_elections_header" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
